--- a/tasks/templates/tasks/details.html
+++ b/tasks/templates/tasks/details.html
@@ -11,5 +11,5 @@
     <li><i class="far fa-calendar-alt"></i>&nbsp;Создана: {{ object.created|date:"Y-b-d H:i" }}</li>
     <li><i class="far fa-clock"></i>&nbsp;Последнее изменение: {{ object.updated }}</li>
   </ul>
-  <i class="fas fa-clipboard-list"></i>&nbsp;<a href="{% url "tasks:list" %}">Назад к списку</a>
+  <i class="fas fa-clipboard-list"></i>&nbsp;<a href="{% url 'tasks:list' %}">Назад к списку</a>
 {% endblock %}
