--- a/tasks/templates/tasks/index.html
+++ b/tasks/templates/tasks/index.html
@@ -12,4 +12,13 @@
     <li>Список задач по категориям пуст. Попробуйте добавить их из админки</li>
   {% endfor %}
   </ul>
+
+  <h1>Приоритеты</h1>
+  <ul>
+  {% for priority in priorities %}
+    <li><span class="badge badge-info">{{ priority }}: {{ priority.todos_count }}</span></li>
+  {% empty %}
+    <li>Список категорий пуст. Попробуйте добавить их из админки</li>
+  {% endfor %}
+  </ul>
 {% endblock %}
